feat: Allow to use Emojis In MySQL for in Notes Title - MEED-4270 - Meeds-io/meeds#1780 (#968)
Prior to this change, a note page title can't have emojis. This change
ensures a compatibility with MySQL for Notes Pages Title.